--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,8 +1,12 @@
 <h1>Example App: Home</h1>
 <a href="/api/scrape">Go Here</a>
-{{!-- {{#each article}}
-<h2><a href="{{this.url}}">{{this.headline}}</a></h2>
-<p>{{this.summary}}</p>
-<img src="{{this.photo}}" height="200" width="200">
-<p>{{this.byline.author}} on {{this.byline.date}}</p>
-{{/each}} --}}
+            <form class="form-inline">
+                <button class="btn btn-outline-success" id="scrape" type="button">Scrape New Articles!</button>
+                <button class="btn btn-sm btn-outline-secondary" type="button">Clear Articles!</button>
+            </form>
+{{#each article}}
+    <h2><a href="{{this.url}}">{{this.headline}}</a></h2>
+    <p>{{this.summary}}</p>
+    <img src="{{this.photo}}" height="200" width="200">
+    <p>{{this.byline.author}} on {{this.byline.date}}</p>
+{{/each}}
